WIP: need to check the bootstrap versions and struggling with nested button for the Menu

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,171 @@
+@charset "UTF-8";@font-face {
+    font-family: "Steelfish";
+    src: url('../fonts/steelfish/steelfish_eb-webfont.eot');
+    src: url('../fonts/steelfish/steelfish_eb-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/steelfish/steelfish_eb-webfont.woff') format('woff'), url('../fonts/steelfish/steelfish eb.otf') format('opentype');
+    font-weight: 800;
+  }
+  @font-face {
+    font-family: "Steelfish";
+    src: url('../fonts/steelfish/steelfish_bd-webfont.eot');
+    src: url('../fonts/steelfish/steelfish_bd-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/steelfish/steelfish_bd-webfont.woff') format('woff'), url('../fonts/steelfish/steelfish bd.otf') format('opentype');
+    font-weight: bold;
+  }
+
+
+
+
+
+
+ #contain-to-grid {
+    position: relative;
+ }
+  
+#contain-to-grid img {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+}
+
+/* Basic settings */
+  a {
+    color: #1d7ea9;
+    -moz-transition-duration: 0.3s;
+    -o-transition-duration: 0.3s;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+  }
+  a:hover {
+    color: #999;
+  }
+  
+  h1, h2, h3, h4, h5, h6 {
+    text-transform: uppercase;
+    letter-spacing: 1px;
+  }
+  
+  .centered-text {
+    text-align: center;
+  }
+
+  .right-border {
+    border-right: 1px solid #cfcfcf;
+  }
+  
+  .left-border {
+    border-left: 1px solid #cfcfcf;
+  }
+  
+  .spacing {
+    height: 20px;
+  }
+  .spacing.two {
+    height: 40px;
+  }
+  .spacing.three {
+    height: 60px;
+  }
+  .spacing.four {
+    height: 80px;
+  }
+  
+  .full {
+    padding: 30px 0 0;
+    background-size: cover;
+    background-position: 50% 50%;
+  }
+
+  #main.top-shift {
+    margin-top: -100px;
+  }
+
+  /* button */
+
+  .dropdown-menu li {
+    position: relative;
+  }
+  .dropdown-menu .dropdown-submenu {
+    display: none;
+    position: absolute;
+    left: 100%;
+    top: -7px;
+  }
+  .dropdown-menu .dropdown-submenu-left {
+    right: 100%;
+    left: auto;
+  }
+  .dropdown-menu > li:hover > .dropdown-submenu {
+    display: block;
+  }
+
+  .button {
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    color: #fff;
+    background: #0480b5;
+    border: 2px solid #0480b5;
+  }
+  .button:hover {
+    background-color: rgba(4, 128, 181, 0.8);
+  }
+  .button.boxed {
+    color: #fff;
+    border: 2px solid #fff;
+    background: none;
+  }
+  
+  .button.boxed:hover {
+    color: #333;
+    background: #fff;
+  }
+
+  /*Top bar */
+.top-bar {
+    z-index: 100;
+  }
+  .top-bar .title-area .name h1 a {
+    font-size: 2.57143rem;
+    color: #333;
+  }
+  
+  .contain-to-grid {
+    -moz-box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.1);
+  }
+  .contain-to-grid .top-bar-section .dropdown li:not(.has-form) a:not(.button) {
+    height: 60px;
+    line-height: 60px;
+  }
+  .contain-to-grid .top-bar-section ul li {
+    background: transparent;
+  }
+
+
+  /*Footer */
+#footer {
+    background: #222;
+    color: #999;
+  }
+  #footer h1 {
+    margin-bottom: 25px;
+  }
+  #footer h1, #footer h2, #footer h3, #footer h4, #footer h5, #footer h6 {
+    color: #eee;
+  }
+  #footer ul {
+    margin: 0;
+  }
+  #footer ul li {
+    list-style: none;
+    line-height: 1.875rem;
+  }
+  #footer ul a {
+    color: #999;
+  }
+  #footer ul a:hover {
+    color: #eee;
+  }
+
 #map {
     height: 400px;
     width: 100%;
