--- a/styles.css
+++ b/styles.css
@@ -12,18 +12,88 @@
   }
 
 
-
- #contain-to-grid {
-    position: relative;
- }
+  .navbar {
+    margin-bottom: 10px;
+    min-height: 80px;
+    overflow: hidden; 
+    padding:-70px 10px;
+    transition: 0.4s;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    z-index: 99;
+  }
   
-#contain-to-grid img {
-    position: absolute;
-    top: 0px;
-    right: 0px;
+  .navbar a {
+    float: right;
+    color: black;
+    text-align: right;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 15px;
+    line-height: 25px;
+    border-radius: 4px;
+  }
+
+  .dropdown-menu.show {
+    display:flex;
+    flex-direction: column;
+    align-items: flex-end;
+    width: 400px;
+}
+  
+  #logo {
+    font-size: 50px;
+    padding: 0 20px;
+    height: 80px;
+    line-height: 80px;
+  }
+  
+
+  .navbar-toggle {
+    margin-top: 23px;
+    padding: 9px 10px !important;
+  }
+  
+  .box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+  }
+
+  /* .navbar-nav{
+    align-items: flex-end;
+  } */
+
+.carousel {
+  position: relative;
+  height: 40vh;
+  padding-top: 40px;
+  margin:auto;
+  }
+
+  .carousel-cell {
+    height: 30vh;
+    padding: 15px 15px;
+  }
+
+/* fade in lazy loaded image */
+.carousel-cell-image.flickity-lazyloaded,
+.carousel-cell-image.flickity-lazyerror {
+  opacity: 1;
+}
+
+.flickity-page-dots, .flickity-prev-next-button{
+  display: none;
 }
 
 /* Basic settings */
+
+body {
+  padding-top: 100px;
+}
+
   a {
     color: #1d7ea9;
     -moz-transition-duration: 0.3s;
@@ -53,7 +123,7 @@
   }
   
   .spacing {
-    height: 20px;
+    height: 1vh;
   }
   .spacing.two {
     height: 40px;
@@ -70,73 +140,6 @@
     background-size: cover;
     background-position: 50% 50%;
   }
-
-  #main.top-shift {
-    margin-top: -100px;
-  }
-
-  /* button */
-
-  .dropdown-menu li {
-    position: relative;
-  }
-  .dropdown-menu .dropdown-submenu {
-    display: none;
-    position: absolute;
-    left: 100%;
-    top: -7px;
-  }
-  .dropdown-menu .dropdown-submenu-left {
-    right: 100%;
-    left: auto;
-  }
-  .dropdown-menu > li:hover > .dropdown-submenu {
-    display: block;
-  }
-
-  .button {
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    color: #fff;
-    background: #0480b5;
-    border: 2px solid #0480b5;
-  }
-  .button:hover {
-    background-color: rgba(4, 128, 181, 0.8);
-  }
-  .button.boxed {
-    color: #fff;
-    border: 2px solid #fff;
-    background: none;
-  }
-  
-  .button.boxed:hover {
-    color: #333;
-    background: #fff;
-  }
-
-  /*Top bar */
-.top-bar {
-    z-index: 100;
-  }
-  .top-bar .title-area .name h1 a {
-    font-size: 2.57143rem;
-    color: #333;
-  }
-  
-  .contain-to-grid {
-    -moz-box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.1);
-    -webkit-box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.1);
-    box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.1);
-  }
-  .contain-to-grid .top-bar-section .dropdown li:not(.has-form) a:not(.button) {
-    height: 60px;
-    line-height: 60px;
-  }
-  .contain-to-grid .top-bar-section ul li {
-    background: transparent;
-  }
-
 
   /*Footer */
 #footer {
