--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
   .navbar {
     margin-bottom: 10px;
-    /* min-height: 80px; */
     overflow: hidden; 
     padding:-70px 10px;
     transition: 0.4s;
@@ -8,7 +7,6 @@
     position: fixed;
     top: 0;
     z-index: 99;
-    /* height:7vh; */
   }
   
   .navbar a {
@@ -92,6 +90,22 @@
   display: none;
 }
 
+.map-container{
+  display:flex;
+  align-self: flex-start;
+  align-items: flex-start;
+  padding:0px;
+  max-width: 100vh;
+}
+
+.map-container p{
+  display:flex;
+  align-self: flex-start;
+  align-items: flex-start;
+  padding:0px;
+  margin-bottom:70px;
+}
+
 /* Basic settings */
 
 body {
@@ -110,9 +124,13 @@ body {
     color: #999;
   }
   
-  h1, h2, h3, h4, h5, h6 {
-    text-transform: uppercase;
+  h1, h2, h5, h6 {
     letter-spacing: 1px;
+  }
+
+  h3{
+    padding-bottom: 10px;
+    padding-left:20px;
   }
 
   p{
@@ -123,45 +141,30 @@ body {
     padding:5vh 5vh;
   }
   
-  .centered-text {
-    text-align: center;
-  }
-
-  .right-border {
-    border-right: 1px solid #cfcfcf;
-  }
-  
-  .left-border {
-    border-left: 1px solid #cfcfcf;
-  }
-  
   .spacing {
     height: 1vh;
-  }
-  .spacing.two {
-    height: 40px;
-  }
-  .spacing.three {
-    height: 60px;
-  }
-  .spacing.four {
-    height: 80px;
-  }
-  
-  .full {
-    padding: 30px 0 0;
-    background-size: cover;
-    background-position: 50% 50%;
   }
 
   /*Footer */
 #footer {
     background: #222;
     color: #999;
+    position:static;
+    margin:0px;
+    padding:0px;
+    height:235px;
   }
+
+  #footer .container{
+    display:flex;
+    align-items: flex-start;
+    align-self: start;
+    padding: 15px 0px 0px 10px;
+    margin: 15px 10px 0px 15px;
+  }
+
   #footer h1 {
     margin-bottom: 25px;
-    /* display:inline; */
   }
   #footer h1, #footer h2, #footer h3, #footer h4, #footer h5, #footer h6 {
     color: #eee;
@@ -169,7 +172,13 @@ body {
   }
   #footer ul {
     margin: 0;
+    padding-left: 0px;
   }
+
+  #footer div{
+    display:inline-block;  
+  }
+
   #footer ul li {
     list-style: none;
     line-height: 1.875rem;
@@ -184,9 +193,17 @@ body {
   #footer p{
     align-items: flex-start;
     padding:0px;
+    margin:0px;
+    font-size: smaller;
+
   }
 
 #map {
     height: 400px;
     width: 100%;
+    /* display: flex;
+    align-self: flex-start; */
+    margin-left:20px;
+    margin-right:30px;
+    margin-bottom:10vh;
   }
