--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,28 @@
   margin-bottom:70px;
 }
 
+.catalotter{
+  display:grid;
+  align-self: middle;
+}
+
+.catalotter h1{
+  display:flex;
+  align-items: flex-start;
+  margin-bottom: 3vh;
+  margin-left:3vh;
+  text-decoration: underline;
+  align-self:center;
+}
+
+.catalotter p{
+  padding-top:20px;
+}
+
+.catalotter img{
+  padding-left:3vh;
+}
+
 /* Basic settings */
 
 body {
@@ -131,6 +153,10 @@ body {
   h3{
     padding-bottom: 10px;
     padding-left:20px;
+  }
+
+  h5{
+    font-size: smaller;
   }
 
   p{
