--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,7 @@
 .catalotter{
   display:grid;
   align-self: middle;
+  padding: 3vh;
 }
 
 .catalotter h1{
@@ -121,11 +122,15 @@
 }
 
 .catalotter p{
-  padding-top:20px;
+  padding:20px 0px 5vh 0px; 
+  margin-inline-end: 32vh;;
 }
 
-.catalotter img{
-  padding-left:3vh;
+.anchor{
+  display: block;
+  height: 170px; /*same height as header*/
+  margin-top: -170px; /*same height as header*/
+  visibility: hidden;
 }
 
 /* Basic settings */
@@ -148,6 +153,7 @@ body {
   
   h1, h2, h5, h6 {
     letter-spacing: 1px;
+    max-inline-size: 50vh;
   }
 
   h3{
@@ -157,11 +163,12 @@ body {
 
   h5{
     font-size: smaller;
+    padding-top: 10px;
+    max-inline-size: 50vh;
   }
 
   p{
     display:flex;
-    align-items: center;
     flex-direction: column;
     justify-content: space-between;
     padding:5vh 5vh;
@@ -227,8 +234,6 @@ body {
 #map {
     height: 400px;
     width: 100%;
-    /* display: flex;
-    align-self: flex-start; */
     margin-left:20px;
     margin-right:30px;
     margin-bottom:10vh;
